--- a/css/styles.css
+++ b/css/styles.css
@@ -125,7 +125,6 @@
   font-size: 14px;
   line-height: 16.41px;
   text-decoration: none;
-  margin-right: 227px;
   padding-left: 50px;
   font-weight: 500;
 }
@@ -161,8 +160,7 @@ body {
 .list {
   list-style-type: none;
   display: flex;
-  margin-top: 0;
-  margin-bottom: 0;
+  margin: 0;
   padding-left: 0;
 }
 
@@ -447,6 +445,10 @@ body {
   list-style: none;
 }
 
+.item {
+  cursor: pointer;
+}
+
 .item:hover {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
@@ -633,4 +635,28 @@ body {
   border-radius: 50%;
   background-color: var(--main-background);
   border: 1px solid rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+}
+
+.box:hover .overlay {
+  transform: translatey(0);
+}
+
+.box {
+  position: relative;
+  overflow: hidden;
+}
+
+.overlay {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--main-blue);
+  color: var(--main-background);
+  padding: 49px 45px 49px 24px;
+
+  transform: translatey(100%);
+  transition: transform 250ms ease;
 }
