--- a/css/styles.css
+++ b/css/styles.css
@@ -353,6 +353,8 @@ body {
   color: var(--main-background);
   text-transform: uppercase;
   font-weight: 700px;
+  text-align: center;
+  line-height: 75px;
 }
 
 .lorem {
